# kogin

./: .gitignore  LICENSE  README.md  extjs.txt  fix.py  kogin.py  package-lock.json  package.json
.github/workflows/: release.yml  windows-debug.yml
help/: help_en.md  help_ja.md  keys_en.md  keys_ja.md
img_base/: simplify.py
src/: LICENSE.ext.html  LICENSE.kogin.html  LICENSE.tauri.html  frame.html  index.html  tabs.html
src-tauri/: Cargo.toml  about.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: keyselector.css  sashi.css  tabs.css
src/assets/js/: app.js  backend.js  backend_dropbox.js  backend_github.js  backend_gitlab.js  backend_googledrive.js  bounds.js  broadcaster.js  clipboard.js  color.js  commands.js  cursor.js  elements.js  filter.js  fs_storage.js  grid.js  ja.js  keyselector.js  layer.js  local_storage.js  mode.js  normalize.js  option.js  pdf.js  picker.js  preview.js  project.js  sashi.js  selection.js  settings.js  shortcut.js  stitch.js  storage.js  tabs.js  template.js  template_fp.js  template_history.js  template_manager.js  templates.js  tool.js  (+3 more)
