[package]
name = "kogin"
version = "0.1.0"
description = "Drawing tool for pattern of Kogin zashi."
authors = ["hanya.runo@gmail.com"]
license = "MIT"
repository = "https://github.com/hanya/kogin"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
downloader = { version = "0.2.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["cli", "dialog-open", "dialog-save", "fs-read-file", "fs-remove-dir", "fs-write-file", "objc-exception", "path-all", "shell-open", "wry", "devtools"], default-features = false }
sha1 = { version = "0.10.1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
